# dzai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
agents/: api-research-agent.yml  test_agent_config.yaml
docs/: agent-as-tool.md  gh-cli.md  google-retry-client.md  thinking-logs.md  tool-context.md
src/dzai/: agent.py  logging_utils.py  retry_utils.py  tools.py
src/dzai/agents/: api-research-agent.yml  google-search.yml
src/dzai/tools/: registry.py  todo.py
